Fix: Footer wrapping over content

--- a/src/main/resources/static/css/readiness.css
+++ b/src/main/resources/static/css/readiness.css
@@ -5,5 +5,5 @@
 html,
 body,
 .content {
-  height: 100%;
+  min-height: 100%;
 }
